--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" rel="script" src="scripts/index.js"></script>
+    
     <title>Creature</title>
 </head>
 <body>
@@ -74,6 +74,8 @@
 
 
 
-
+<script type="text/javascript" rel="script" src="scripts/index.js">
 </body>
-</html>
+</html></script>
+    </body>
+    </html>
